[gd_scene load_steps=13 format=3 uid="uid://kv2ee3emimha"]

[ext_resource type="Texture2D" uid="uid://ch83psq8f63vr" path="res://addons/Tiny Swords/UI/Ribbons/Ribbon_Red_3Slides.png" id="1_34pgc"]
[ext_resource type="Script" path="res://UI/game_over_ui.gd" id="1_arrxj"]
[ext_resource type="Texture2D" uid="uid://drf4u3tx0ujts" path="res://addons/Tiny Swords/UI/Banners/Banner_Horizontal.png" id="2_4neqa"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i8xeq"]
texture = ExtResource("1_34pgc")
texture_margin_left = 64.0
texture_margin_right = 64.0
axis_stretch_horizontal = 2

[sub_resource type="SystemFont" id="SystemFont_ai2h0"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_jkt62"]
line_spacing = 10.0
font = SubResource("SystemFont_ai2h0")
font_size = 48
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vi6eg"]
texture = ExtResource("2_4neqa")
texture_margin_left = 32.0
texture_margin_top = 16.0
texture_margin_right = 32.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(32, 48, 128, 128)

[sub_resource type="SystemFont" id="SystemFont_20h8l"]
font_names = PackedStringArray("Comic Sans MS")
font_weight = 999
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_au51x"]
font = SubResource("SystemFont_20h8l")
font_size = 32
font_color = Color(0, 0, 0, 0.878431)

[sub_resource type="Animation" id="Animation_vaonw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(319, 42)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(304, 700)]
}

[sub_resource type="Animation" id="Animation_iou50"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.258816, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 0.67451)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopPanel:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.31864, 1),
"update": 0,
"values": [Vector2(319, -169), Vector2(319, 42)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomPanel:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1.31951, 1),
"update": 0,
"values": [Vector2(304, 700), Vector2(304, 400)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qnfwb"]
_data = {
"RESET": SubResource("Animation_vaonw"),
"default": SubResource("Animation_iou50")
}

[node name="GameOverUI" type="CanvasLayer"]
script = ExtResource("1_arrxj")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="TopPanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 319.0
offset_top = 42.0
offset_right = 833.0
offset_bottom = 182.0
grow_horizontal = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_i8xeq")

[node name="GameOverLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -33.5
offset_right = 46.0
offset_bottom = -10.5
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_jkt62")

[node name="BottomPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 304.0
offset_top = 700.0
offset_right = 848.0
offset_bottom = 875.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_vi6eg")

[node name="CenterContainer" type="CenterContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -50.0
offset_right = 158.5
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="BottomPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 14
columns = 2

[node name="Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Time Survived: "
label_settings = SubResource("LabelSettings_au51x")

[node name="Time_Label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_au51x")

[node name="Label2" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
layout_mode = 2
text = "Monsters Defeated: "
label_settings = SubResource("LabelSettings_au51x")

[node name="Monster_label" type="Label" parent="BottomPanel/CenterContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "12345"
label_settings = SubResource("LabelSettings_au51x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qnfwb")
}
autoplay = "default"
